--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -30,4 +31,26 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+} */
+
+
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+
+@layer base {
+  * {
+    @apply p-0 m-0 box-border;
+  }
+  body {
+
+  }
+}
+
+.zoom {
+  transition: transform 5s ease-in-out;
 }
